fixed social buttons spacing and linked back to main page

--- a/phys-cal-stats/mainsss.css
+++ b/phys-cal-stats/mainsss.css
@@ -112,3 +112,7 @@
 .subcat {
   padding-left: 40px;
 }
+
+.socialbtns {
+  padding-left: 15px;
+}
